# vendingmachine-cpp

./: CMakeLists.txt  README.md
.devcontainer/: devcontainer.json
src/: CMakeLists.txt  coinpaymentprocessor.cc  paymentdb.cc  paymentdb.h  paymentprocessor.h  product.cc  vendingmachine.cc
test/: CMakeLists.txt  coinpaymentprocessor_integration_test.cc  coinpaymentprocessor_test.cc  mock_paymentdb.h  mock_paymentprocessor.h  paymentdb_test.cc  vendingmachine_integration_test.cc  vendingmachine_test.cc
